@@ -1,0 +1,10 @@
+.bzrignore
+.bzr
+*.py[oc]
+dist
+sdist
+build
+*.egg
+*.egg-info
+nohup.out
+*.sw[po]
